--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -8,10 +8,14 @@
     background-color: #000000;
     /* height: 100vh; */
 }
-
+.logoContainer {
+    /* position: absolute; */
+    /* top: 100px; */
+    padding-right: 210px;
+}
 .logo,
 .logo-small {
-    /* display: flex; */
+    
     justify-content: center;
     align-self: center;
 }
