--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -28,7 +28,7 @@ body {
 .logo {
     width: 80px;
     height: 80px;
-    /* margin-top: 250px; */
+    margin-top: 250px;
 }
 
 .logo img {
@@ -133,26 +133,29 @@ input:focus {
     display: flex;
     justify-content: space-between;
     padding-top: 10px;
+    text-align: center;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .empNo,
 .empName,
 .empDob,
 .empRole {
-    text-align: left;
+    text-align: center;
     font: normal normal normal 12px/16px Mulish;
     letter-spacing: 0.01px;
     color: #FFFFFF;
     opacity: 1;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 }
 .evm {
-    text-align: left;
+    text-align: center;
     font: normal normal normal 12px/16px Mulish;
     letter-spacing: 0.01px;
     color: #FFFFFF;
     opacity: 1;
-    padding-left: 30px;
+    /* padding-left: 30px; */
 }
 
 .number {
@@ -161,7 +164,7 @@ input:focus {
     letter-spacing: 0.02px;
     color: #FFFFFFB3;
     opacity: 1;
-    padding-right: 200px;
+    padding-right: 150px;
 }
 
 .name {
@@ -170,7 +173,7 @@ input:focus {
     letter-spacing: 0.02px;
     color: #FFFFFFB3;
     opacity: 1;
-    padding-right: 110px;
+    padding-right: 100px;
     
 }
 .date {
@@ -179,7 +182,7 @@ input:focus {
     letter-spacing: 0.02px;
     color: #de5410;
     opacity: 1;
-    padding-right: 120px;
+    padding-right: 70px;
 }
 
 .role {
@@ -188,7 +191,7 @@ input:focus {
     letter-spacing: 0.02px;
     color: #36A546;
     opacity: 1;
-    padding-right: 70px;
+    padding-right: 60px;
 }
 
 @media screen and (max-width: 412px) and (max-height: 914px) {
